D-4723 Fix contrast for adams prospector section
https://marmot.myjetbrains.com/youtrack/issue/D-4723

--- a/vufind/web/interface/themes/adams/css/main.less
+++ b/vufind/web/interface/themes/adams/css/main.less
@@ -130,6 +130,10 @@
   font-size: 14px;
 }
 
-#prospectorSearchResultsPlaceholder  {
+//#prospectorSearchResultsPlaceholder { // original selector
+#prospectorSearchResultsSection {
   background-color: #F4EAE4; // https://webaim.org/resources/contrastchecker/?fcolor=6B6B6B&bcolor=F4EAE4
+  a {
+    color: @darkened-link-color-resp; // https://webaim.org/resources/contrastchecker/?fcolor=3B679A&bcolor=F4EAE4
+  }
 }
